--- a/admin.html
+++ b/admin.html
@@ -41,7 +41,7 @@
     }
     .btn-login:hover { background-position: right center; transform: translateY(-1px); }
     .btn-login:disabled { opacity: 0.6; cursor: not-allowed; transform: none; }
-    .login-err { color: #ff6b6b; font-size: 0.82rem; text-align: center; margin-top: 12px; display: none; }
+    .login-err { color: #ff6b6b; font-size: 0.82rem; text-align: center; margin-top: 12px; display: none; padding: 10px; background: rgba(255,107,107,0.08); border-radius: 8px; }
 
     /* ── Dashboard ── */
     #dashboard { display: none; position: relative; z-index: 1; min-height: 100vh; }
@@ -51,8 +51,8 @@
       backdrop-filter: blur(10px); position: sticky; top: 0; z-index: 10;
     }
     .topbar-brand { font-family: 'Playfair Display', serif; font-size: 1.3rem; color: var(--gold); }
-    .topbar-brand span { font-size: 0.75rem; font-family: 'Poppins', sans-serif; color: rgba(255,255,255,0.4); display: block; letter-spacing: 2px; text-transform: uppercase; }
-    .topbar-actions { display: flex; gap: 12px; align-items: center; }
+    .topbar-brand span { font-size: 0.72rem; font-family: 'Poppins', sans-serif; color: rgba(255,255,255,0.35); display: block; letter-spacing: 2px; text-transform: uppercase; }
+    .topbar-actions { display: flex; gap: 10px; align-items: center; }
     .btn-sm {
       padding: 9px 18px; border-radius: 10px; font-size: 0.82rem; font-family: 'Poppins', sans-serif;
       font-weight: 600; cursor: pointer; transition: all 0.25s; border: none;
@@ -62,78 +62,137 @@
     .btn-logout { background: rgba(255,255,255,0.08); color: rgba(255,255,255,0.6); border: 1px solid rgba(255,255,255,0.12); }
     .btn-logout:hover { background: rgba(255,255,255,0.14); color: #fff; }
 
-    .main { padding: 32px; max-width: 1200px; margin: 0 auto; }
+    .main { padding: 32px; max-width: 1100px; margin: 0 auto; }
 
     /* Stats */
-    .stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 16px; margin-bottom: 32px; }
+    .stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(175px, 1fr)); gap: 14px; margin-bottom: 28px; }
     .stat-card {
       background: var(--card); border: 1px solid rgba(255,215,0,0.12); border-radius: 16px;
-      padding: 20px 24px; text-align: center; transition: border-color 0.3s;
+      padding: 20px 22px; text-align: center; transition: border-color 0.3s, transform 0.2s;
     }
-    .stat-card:hover { border-color: rgba(255,215,0,0.35); }
+    .stat-card:hover { border-color: rgba(255,215,0,0.35); transform: translateY(-2px); }
     .stat-icon { font-size: 2rem; margin-bottom: 6px; }
     .stat-num { font-family: 'Playfair Display', serif; font-size: 2.4rem; font-weight: 700; color: var(--gold); }
-    .stat-label { font-size: 0.75rem; text-transform: uppercase; letter-spacing: 2px; color: rgba(255,255,255,0.4); margin-top: 2px; }
+    .stat-label { font-size: 0.72rem; text-transform: uppercase; letter-spacing: 2px; color: rgba(255,255,255,0.35); margin-top: 2px; }
 
     /* Table */
     .table-wrap { background: var(--card); border: 1px solid rgba(255,215,0,0.12); border-radius: 20px; overflow: hidden; }
     .table-head {
-      padding: 20px 24px; display: flex; align-items: center; justify-content: space-between;
+      padding: 18px 24px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 12px;
       border-bottom: 1px solid rgba(255,215,0,0.1);
     }
     .table-title { font-family: 'Playfair Display', serif; font-size: 1.2rem; color: var(--gold); }
     .search-box {
       background: rgba(255,255,255,0.06); border: 1px solid rgba(255,215,0,0.15);
       border-radius: 10px; padding: 8px 14px; color: #fff; font-family: 'Poppins', sans-serif;
-      font-size: 0.85rem; outline: none; width: 220px;
+      font-size: 0.85rem; outline: none; width: 220px; transition: border-color 0.3s;
     }
     .search-box:focus { border-color: rgba(255,215,0,0.4); }
     .search-box::placeholder { color: rgba(255,255,255,0.25); }
 
-    table { width: 100%; border-collapse: collapse; }
+    .table-scroll { overflow-x: auto; }
+    table { width: 100%; border-collapse: collapse; min-width: 560px; }
     thead th {
-      padding: 14px 20px; text-align: left; font-size: 0.72rem; text-transform: uppercase;
-      letter-spacing: 2px; color: rgba(255,255,255,0.35); border-bottom: 1px solid rgba(255,255,255,0.06);
-      font-weight: 500;
+      padding: 12px 18px; text-align: left; font-size: 0.7rem; text-transform: uppercase;
+      letter-spacing: 2px; color: rgba(255,255,255,0.3); border-bottom: 1px solid rgba(255,255,255,0.06);
+      font-weight: 500; white-space: nowrap;
     }
     tbody tr { border-bottom: 1px solid rgba(255,255,255,0.04); transition: background 0.2s; }
     tbody tr:last-child { border-bottom: none; }
     tbody tr:hover { background: rgba(255,215,0,0.03); }
-    tbody td { padding: 14px 20px; font-size: 0.88rem; color: rgba(255,255,255,0.8); }
+    tbody td { padding: 13px 18px; font-size: 0.87rem; color: rgba(255,255,255,0.8); }
+
     .id-badge {
       background: rgba(255,215,0,0.1); border: 1px solid rgba(255,215,0,0.25);
-      color: var(--gold); padding: 3px 10px; border-radius: 20px; font-size: 0.78rem;
-      font-weight: 600; letter-spacing: 1px;
+      color: var(--gold); padding: 3px 10px; border-radius: 20px; font-size: 0.76rem;
+      font-weight: 600; letter-spacing: 1px; white-space: nowrap;
     }
-    .act-chip {
-      padding: 4px 12px; border-radius: 20px; font-size: 0.75rem; font-weight: 600;
-    }
+    .act-chip { padding: 4px 12px; border-radius: 20px; font-size: 0.74rem; font-weight: 600; white-space: nowrap; }
     .act-Dance { background: rgba(255,20,147,0.15); color: #ff69b4; border: 1px solid rgba(255,20,147,0.25); }
     .act-Singing { background: rgba(255,215,0,0.12); color: var(--gold); border: 1px solid rgba(255,215,0,0.25); }
     .act-Acting { background: rgba(255,107,0,0.15); color: #ff8c42; border: 1px solid rgba(255,107,0,0.25); }
 
-    .empty-state { text-align: center; padding: 60px 20px; color: rgba(255,255,255,0.3); }
-    .empty-state .e-icon { font-size: 3rem; margin-bottom: 12px; }
-    .loading { text-align: center; padding: 60px; color: rgba(255,255,255,0.4); }
+    /* Delete button */
+    .btn-delete {
+      background: rgba(192,21,42,0.15); border: 1px solid rgba(192,21,42,0.35);
+      color: #ff6b6b; padding: 5px 12px; border-radius: 8px; font-size: 0.76rem;
+      font-family: 'Poppins', sans-serif; font-weight: 600; cursor: pointer;
+      transition: all 0.2s; white-space: nowrap;
+    }
+    .btn-delete:hover { background: rgba(192,21,42,0.35); border-color: #ff6b6b; color: #fff; transform: scale(1.05); }
+    .btn-delete:active { transform: scale(0.98); }
+    .btn-delete:disabled { opacity: 0.4; cursor: not-allowed; transform: none; }
 
-    @media (max-width: 700px) {
-      .topbar { padding: 14px 16px; }
-      .main { padding: 20px 16px; }
-      table { font-size: 0.8rem; }
-      thead th, tbody td { padding: 10px 12px; }
-      .search-box { width: 140px; }
+    /* Confirm modal */
+    .modal-overlay {
+      position: fixed; inset: 0; background: rgba(0,0,0,0.75); z-index: 100;
+      display: none; align-items: center; justify-content: center; padding: 20px;
+      backdrop-filter: blur(4px);
+    }
+    .modal-overlay.show { display: flex; }
+    .modal-box {
+      background: #1a0010; border: 1px solid rgba(255,215,0,0.2); border-radius: 20px;
+      padding: 36px 32px; max-width: 380px; width: 100%; text-align: center;
+      animation: fadeUp 0.3s ease both; box-shadow: 0 0 60px rgba(192,21,42,0.3);
+    }
+    .modal-icon { font-size: 2.5rem; margin-bottom: 12px; }
+    .modal-title { font-family: 'Playfair Display', serif; font-size: 1.4rem; color: #fff; margin-bottom: 8px; }
+    .modal-sub { color: rgba(255,255,255,0.5); font-size: 0.88rem; line-height: 1.6; margin-bottom: 24px; }
+    .modal-name { color: var(--gold); font-weight: 600; }
+    .modal-actions { display: flex; gap: 12px; justify-content: center; }
+    .btn-cancel { background: rgba(255,255,255,0.08); border: 1px solid rgba(255,255,255,0.15); color: rgba(255,255,255,0.7); padding: 11px 24px; border-radius: 10px; font-family: 'Poppins', sans-serif; font-size: 0.88rem; cursor: pointer; transition: all 0.2s; }
+    .btn-cancel:hover { background: rgba(255,255,255,0.14); color: #fff; }
+    .btn-confirm-delete { background: var(--crimson); border: none; color: #fff; padding: 11px 24px; border-radius: 10px; font-family: 'Poppins', sans-serif; font-size: 0.88rem; font-weight: 600; cursor: pointer; transition: all 0.2s; box-shadow: 0 4px 16px rgba(192,21,42,0.4); }
+    .btn-confirm-delete:hover { background: #a0102a; transform: translateY(-1px); }
+
+    .empty-state { text-align: center; padding: 60px 20px; color: rgba(255,255,255,0.3); }
+    .empty-state .e-icon { font-size: 3rem; margin-bottom: 12px; display: block; }
+    .loading { text-align: center; padding: 60px; color: rgba(255,255,255,0.35); }
+
+    /* Toast */
+    .toast {
+      position: fixed; bottom: 28px; right: 28px; z-index: 200;
+      background: rgba(30,30,30,0.95); border: 1px solid rgba(255,215,0,0.2);
+      border-radius: 12px; padding: 14px 20px; font-size: 0.88rem;
+      opacity: 0; transform: translateY(12px); transition: all 0.3s;
+      pointer-events: none; max-width: 320px;
+    }
+    .toast.show { opacity: 1; transform: translateY(0); }
+    .toast.success { border-color: rgba(72,199,142,0.4); color: #48c78e; }
+    .toast.error { border-color: rgba(255,107,107,0.4); color: #ff6b6b; }
+
+    @media (max-width: 640px) {
+      .topbar { padding: 14px 16px; flex-wrap: wrap; gap: 10px; }
+      .main { padding: 20px 14px; }
+      .search-box { width: 100%; }
     }
   </style>
 </head>
 <body>
 <div class="bg"></div>
 
+<!-- Delete Confirm Modal -->
+<div class="modal-overlay" id="deleteModal">
+  <div class="modal-box">
+    <div class="modal-icon">🗑️</div>
+    <div class="modal-title">Delete Registration?</div>
+    <div class="modal-sub">You're about to remove <span class="modal-name" id="modalName"></span> (<span id="modalRegId"></span>). This cannot be undone.</div>
+    <div class="modal-actions">
+      <button class="btn-cancel" onclick="closeModal()">Cancel</button>
+      <button class="btn-confirm-delete" id="confirmDeleteBtn" onclick="confirmDelete()">Yes, Delete</button>
+    </div>
+  </div>
+</div>
+
+<!-- Toast -->
+<div class="toast" id="toast"></div>
+
 <!-- Login -->
 <div class="login-wrap" id="loginWrap">
   <div class="login-box">
     <div class="login-icon">🔐</div>
     <div class="login-title">Organiser Login</div>
-    <div class="login-sub">Bollywood Day 2025 · Admin</div>
+    <div class="login-sub">Bollywood Day 2026 · Admin</div>
     <div class="field">
       <label>Password</label>
       <input type="password" id="passwordInput" placeholder="Enter admin password" onkeydown="if(event.key==='Enter') doLogin()"/>
@@ -147,7 +206,7 @@
 <div id="dashboard">
   <div class="topbar">
     <div class="topbar-brand">
-      🎬 Bollywood Day 2025
+      🎬 Bollywood Day 2026
       <span>Organiser Dashboard</span>
     </div>
     <div class="topbar-actions">
@@ -158,34 +217,20 @@
 
   <div class="main">
     <div class="stats">
-      <div class="stat-card">
-        <div class="stat-icon">👥</div>
-        <div class="stat-num" id="totalCount">—</div>
-        <div class="stat-label">Total Registered</div>
-      </div>
-      <div class="stat-card">
-        <div class="stat-icon">💃</div>
-        <div class="stat-num" id="danceCount">—</div>
-        <div class="stat-label">Dance</div>
-      </div>
-      <div class="stat-card">
-        <div class="stat-icon">🎤</div>
-        <div class="stat-num" id="singingCount">—</div>
-        <div class="stat-label">Singing</div>
-      </div>
-      <div class="stat-card">
-        <div class="stat-icon">🎭</div>
-        <div class="stat-num" id="actingCount">—</div>
-        <div class="stat-label">Acting</div>
-      </div>
+      <div class="stat-card"><div class="stat-icon">👥</div><div class="stat-num" id="totalCount">—</div><div class="stat-label">Total Registered</div></div>
+      <div class="stat-card"><div class="stat-icon">💃</div><div class="stat-num" id="danceCount">—</div><div class="stat-label">Dance</div></div>
+      <div class="stat-card"><div class="stat-icon">🎤</div><div class="stat-num" id="singingCount">—</div><div class="stat-label">Singing</div></div>
+      <div class="stat-card"><div class="stat-icon">🎭</div><div class="stat-num" id="actingCount">—</div><div class="stat-label">Acting</div></div>
     </div>
 
     <div class="table-wrap">
       <div class="table-head">
         <div class="table-title">All Registrations</div>
-        <input class="search-box" placeholder="🔍 Search name / email…" oninput="filterTable(this.value)"/>
+        <input class="search-box" placeholder="🔍 Search name / ID…" oninput="filterTable(this.value)"/>
       </div>
-      <div id="tableContainer"><div class="loading">Loading registrations…</div></div>
+      <div class="table-scroll">
+        <div id="tableContainer"><div class="loading">⏳ Loading registrations…</div></div>
+      </div>
     </div>
   </div>
 </div>
@@ -193,8 +238,9 @@
 <script>
   let token = sessionStorage.getItem('bld_token');
   let allRegs = [];
+  let pendingDeleteId = null;
+  let pendingDeleteBtn = null;
 
-  // Auto-login if token saved
   if (token) showDashboard();
 
   async function doLogin() {
@@ -241,7 +287,7 @@
       updateStats(allRegs);
       renderTable(allRegs);
     } catch {
-      document.getElementById('tableContainer').innerHTML = '<div class="empty-state"><div class="e-icon">⚠️</div>Failed to load registrations.</div>';
+      document.getElementById('tableContainer').innerHTML = '<div class="empty-state"><span class="e-icon">⚠️</span>Failed to load registrations.</div>';
     }
   }
 
@@ -254,34 +300,102 @@
 
   function renderTable(regs) {
     if (!regs.length) {
-      document.getElementById('tableContainer').innerHTML = '<div class="empty-state"><div class="e-icon">🎬</div>No registrations yet. Share the link!</div>';
+      document.getElementById('tableContainer').innerHTML = '<div class="empty-state"><span class="e-icon">🎬</span>No registrations yet. Share the link!</div>';
       return;
     }
     const rows = regs.map(r => `
-      <tr>
-        <td><span class="id-badge">${r.id || '—'}</span></td>
-        <td>${r.name || '—'}</td>
-        <td>${r.email || '—'}</td>
-        <td>${r.phone || '—'}</td>
+      <tr id="row-${r.reg_id}">
+        <td><span class="id-badge">${r.reg_id || '—'}</span></td>
+        <td>${escHtml(r.name || '—')}</td>
+        <td>${escHtml(r.phone || '—')}</td>
         <td><span class="act-chip act-${r.act}">${r.act || '—'}</span></td>
-        <td style="color:rgba(255,255,255,0.4);font-size:0.8rem">${r.timestamp || '—'}</td>
+        <td style="color:rgba(255,255,255,0.35);font-size:0.78rem">${r.registered_at || '—'}</td>
+        <td>
+          <button class="btn-delete" onclick="openDeleteModal('${r.reg_id}', '${escHtml(r.name)}', this)">
+            🗑 Delete
+          </button>
+        </td>
       </tr>`).join('');
+
     document.getElementById('tableContainer').innerHTML = `
       <table>
-        <thead><tr><th>Reg ID</th><th>Name</th><th>Email</th><th>Phone</th><th>Act</th><th>Registered At</th></tr></thead>
+        <thead>
+          <tr>
+            <th>Reg ID</th><th>Name</th><th>Phone</th>
+            <th>Act</th><th>Registered At</th><th>Action</th>
+          </tr>
+        </thead>
         <tbody>${rows}</tbody>
       </table>`;
   }
 
+  function escHtml(str) {
+    return String(str).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c]));
+  }
+
   function filterTable(q) {
+    const lq = q.toLowerCase();
     const filtered = allRegs.filter(r =>
-      (r.name || '').toLowerCase().includes(q.toLowerCase()) ||
-      (r.email || '').toLowerCase().includes(q.toLowerCase()) ||
-      (r.id || '').toLowerCase().includes(q.toLowerCase())
+      (r.name || '').toLowerCase().includes(lq) ||
+      (r.reg_id || '').toLowerCase().includes(lq) ||
+      (r.phone || '').toLowerCase().includes(lq)
     );
     renderTable(filtered);
   }
 
+  // ── Delete flow ──
+  function openDeleteModal(regId, name, btn) {
+    pendingDeleteId = regId;
+    pendingDeleteBtn = btn;
+    document.getElementById('modalName').textContent = name;
+    document.getElementById('modalRegId').textContent = regId;
+    document.getElementById('deleteModal').classList.add('show');
+  }
+
+  function closeModal() {
+    document.getElementById('deleteModal').classList.remove('show');
+    pendingDeleteId = null;
+    pendingDeleteBtn = null;
+  }
+
+  async function confirmDelete() {
+    if (!pendingDeleteId) return;
+    const confirmBtn = document.getElementById('confirmDeleteBtn');
+    confirmBtn.disabled = true; confirmBtn.textContent = 'Deleting…';
+    if (pendingDeleteBtn) { pendingDeleteBtn.disabled = true; }
+
+    try {
+      const res = await fetch(`/api/admin/registrations/${encodeURIComponent(pendingDeleteId)}`, {
+        method: 'DELETE', headers: { Authorization: 'Bearer ' + token }
+      });
+      if (res.status === 401) { logout(); return; }
+      if (!res.ok) throw new Error('Delete failed');
+
+      // Remove row from UI
+      const row = document.getElementById(`row-${pendingDeleteId}`);
+      if (row) { row.style.transition = 'opacity 0.3s'; row.style.opacity = '0'; setTimeout(() => row.remove(), 300); }
+
+      // Update local data
+      allRegs = allRegs.filter(r => r.reg_id !== pendingDeleteId);
+      updateStats(allRegs);
+
+      closeModal();
+      showToast('✅ Registration deleted successfully', 'success');
+    } catch {
+      closeModal();
+      showToast('❌ Failed to delete. Please try again.', 'error');
+      if (pendingDeleteBtn) { pendingDeleteBtn.disabled = false; }
+    }
+
+    confirmBtn.disabled = false; confirmBtn.textContent = 'Yes, Delete';
+  }
+
+  // Close modal on overlay click
+  document.getElementById('deleteModal').addEventListener('click', function(e) {
+    if (e.target === this) closeModal();
+  });
+
+  // ── Download ──
   async function downloadExcel() {
     const res = await fetch('/api/admin/download', { headers: { Authorization: 'Bearer ' + token } });
     if (res.status === 401) { logout(); return; }
@@ -290,9 +404,18 @@
     a.href = URL.createObjectURL(blob);
     a.download = 'bollywood-day-registrations.xlsx';
     a.click();
+    showToast('📥 Excel file downloaded!', 'success');
   }
 
-  // Refresh every 30s
+  // ── Toast ──
+  function showToast(msg, type = 'success') {
+    const t = document.getElementById('toast');
+    t.textContent = msg;
+    t.className = `toast ${type} show`;
+    setTimeout(() => t.classList.remove('show'), 3500);
+  }
+
+  // Auto-refresh every 30s
   setInterval(() => { if (token) loadRegistrations(); }, 30000);
 </script>
 </body>
